# pytest_101

./: LICENSE  README.md  pyproject.toml  pytest.ini
src/: check_response.py  external.py  module_a.py  module_b.py  module_mock.py
tests/: fixture.py  test_check_response.py  test_module_a.py  test_module_b.py  test_module_mock.py
